# cdk-aws-serverless-otlp-forwarder-cwl

./: .projenrc.ts  Cargo.toml  README.md  biome.jsonc  package.json  pnpm-lock.yaml
.github/workflows/: build.yml
.projen/: deps.json
aaa/: issue.md
src/: main.ts
src/functions/client-rust-wide/: Cargo.toml
src/functions/client-rust-wide/src/: main.rs
src/functions/client-rust/src/: main.rs
src/stacks/: my-stack.ts
src/utils/: validate-env.ts
