[package]
name = "client-rust-wide"
version = "1.0.0"
edition.workspace = true
rust-version.workspace = true

[dependencies]
aws_lambda_events = { workspace = true }
lambda-otel-lite = { workspace = true }
lambda_runtime = { workspace = true }
opentelemetry = { workspace = true }
opentelemetry_sdk = { workspace = true }
opentelemetry-semantic-conventions = { workspace = true }
otlp-stdout-span-exporter = { workspace = true }
rand = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }
tracing-opentelemetry = { workspace = true }
